# aux.link

./: .gitignore  :w  CHANGELOG.md  Dockerfile  LICENSE  README.md  augslink-service.cabal  augslink.cabal  augslink.service  auxwire.cabal  auxwire.service  docker-compose.local.yml  docker-compose.prod.yml  gamertags.txt  package-lock.json  package.json  tsconfig.json  webpack.config.js  yt-dlp.conf
..bfg-report/2023-08-07/14-47-40/: cache-stats.txt  deleted-files.txt
..bfg-report/2023-08-07/14-50-21/: cache-stats.txt  object-id-map.old-new.txt
.github/: CODEOWNERS
.github/workflows/: deploy.yml  e2e-release.yml
app/: CommandLine.hs  Main.hs
app/AugsLink/Browser/: .RoomMobile.hs.swp  RoomDesktop.hs  RoomMobile.hs
app/AugsLink/Core/: API.hs  FFMpeg.hs  Internal.hs  Model.hs  Music.hs  Registry.hs  Room.hs  Shared.hs  User.hs  Wav.hs
app/AugsLink/Internal/: State.hs
app/AugsLink/Service/: API.hs  Application.hs  Model.hs  Room.hs
app/AugsLink/Service/Handlers/: DeleteSong.hs  GetAudioWorker.hs  GetHome.hs  GetRoom.hs  ListenWs.hs  MusicWs.hs  PostHome.hs  PostScrapeSong.hs  PostUploadSong.hs  PostValidateScrapeUrl.hs  PostValidateUrl.hs  PutEnqueueSong.hs  PutMoveSong.hs  PutScrapeSong.hs  PutStartMusic.hs  PutStopListen.hs  PutUploadSong.hs  RoomWs.hs
app/Augslink/Service/: API.hs  Application.hs
app/AuxWire/Browser/: RoomMobile.hs
app/AuxWire/Core/: API.hs  Model.hs  Music.hs  Room.hs  Shared.hs  User.hs
app/AuxWire/Service/: API.hs
app/AuxWire/Service/Handlers/: GetHome.hs  MusicWs.hs  PostHome.hs  PostValidateUrl.hs  PutStartMusic.hs  PutUploadSong.hs  RoomWs.hs
app/Commons/: FFMpeg.hs  Queue.hs  State.hs  Wav.hs  YoutubeDl.hs  YtDlp.hs
client/modules/: audio-message-processor.ts  aux-audio-player.ts  drop-element.ts  responsive-queue-animation.ts
client/scripts/: room-main.ts
client/views/: home.html
html-demo/: room-desktop.css  room-mobile.css  room.html  room.js
nginx-proxy/vhost.d/: augs.link_location
notes/: 01042023.txt  05042023.txt  20032023.txt  21032023.txt  22032023.txt
pages/: home.html  room.html
static/: song.mp3.REMOVED.git-id  song.wav.REMOVED.git-id
static/modules/: animation-composition.ts  audio-message-processor.ts  aux-audio-player.js  aux-audio-player.ts  cheerio-service.ts  currently-playing-element.ts  drop-element.ts  event-bus.ts  interface.ts  loader.ts  order-element.js  order-element.ts  responsive-queue-animation.ts  rest-client.ts  room-message-listener.js  room-message-listener.ts  room-message-publisher.ts  song-queue.ts  stylesheet-manipulations.ts  svg.ts  user-element.ts  user-section-element.ts
static/modules/currently-playing/: audio-visualizer.ts  currently-playing-element.ts
static/modules/currently-playing/transitions/: from-connecting-to-countdown.ts  from-connecting-to-disconnecting.ts  from-connecting-to-streaming.ts  from-disconnected-to-connecting.ts  from-notrunning-to-disconnected.ts  from-polling-to-disconnected.ts  from-streaming-to-disconnected.ts
static/modules/currently-playing/transitions/from-connecting/: from-connecting-to-countdown.ts  from-connecting-to-disconnecting.ts  from-connecting-to-not-running.ts  from-connecting-to-polling.ts  from-connecting-to-streaming.ts
static/modules/currently-playing/transitions/from-countdown/: from-countdown-to-disconnected.ts  from-countdown-to-polling.ts
static/modules/currently-playing/transitions/from-notrunning/: from-notrunning-to-countdown.ts  from-notrunning-to-disconnected.ts
static/modules/currently-playing/transitions/from-polling/: from-polling-to-countdown.ts  from-polling-to-disconnected.ts  from-polling-to-streaming.ts
static/modules/currently-playing/transitions/from-streaming/: from-streaming-to-countdown.ts  from-streaming-to-disconnected.ts
static/modules/user-queue/: user-element.ts  user-queue-element.ts  user-section-element.ts
static/pages/404/: 404.html
static/pages/home/: home.html
static/pages/room/: room.html  room.js
static/scripts/: audio-message-processor.js  audio-worklet-processor.js  aux-audio-player.js  aux-audio-socket-worker.ts  aux-worklet-processor.js  aux-worklet-processor.ts  current-section.js  currently-playing-element.js  democracy-section.js  drop-element.js  drop-section.js  free-queue.js  home.js  order-element.js  order-section.js  queue-output-processor.js  queue-section.js  room-main.js  room-main.ts  room-message-listener.js  room.js  user-message-processor.js  ws-audio-worker.js
static/scripts/workers/: aux-audio-worker-ws-impl.js  aux-audio-worklet.js  scrap
static/styles/: current-section.css  home.css  order-section.css  queue-section.css  room-desktop.css  room-mobile.css  room.css
static/views/: 500.html  home.html
static/web-components/current-section/: current-section.html  current-section.js
static/web-components/democracy-section/: democracy-section.html  democracy-section.js
static/web-components/drop-section/: drop-section.html  drop-section.js
static/web-components/order-section/: order-section.html  order-section.js
static/web-components/queue-section/: queue-section.html  queue-section.js
views/: 405.html  home.html  room.html
web-server/: CommandLine.hs
web-server/AuxWire/Browser/: RoomDesktop.hs
web-server/AuxWire/Core/: Registry.hs
web-server/AuxWire/Service/: Application.hs
web-server/AuxWire/Service/Handlers/: GetRoom.hs
web-server/Commons/: FFMpeg.hs  Wav.hs  YtDlp.hs
