cabal-version:      3.0
name:               augslink-service
version:            0.1.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             fisnik
maintainer:         fisnik.ukaj@justeattakeaway.com
-- copyright:
category:           Network
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable augslink-service
    import:           warnings
    main-is:          Main.hs

    other-modules:      AugsLink.Core.API
                      , AugsLink.Core.Model 
                      , AugsLink.Core.Registry 
                      , AugsLink.Core.Room 
                      , AugsLink.Core.Shared 
                      , AugsLink.Core.User 
                      , AugsLink.Service.API 
                      , AugsLink.Service.Application 
                      , AugsLink.Service.Handlers.DeleteSong
                      , AugsLink.Service.Handlers.GetHome 
                      , AugsLink.Service.Handlers.GetRoom 
                      , AugsLink.Service.Handlers.PostHome
                      , AugsLink.Service.Handlers.PutEnqueueSong
                      , AugsLink.Service.Handlers.PutMoveSong
                      , AugsLink.Service.Handlers.PutScrapeSong
                      , AugsLink.Service.Handlers.PutUploadSong
                      , AugsLink.Service.Handlers.RoomWs 
                      , CommandLine 
                      , Commons.State
    -- other-extensions:
    build-depends:      aeson
                      , async
                      , base ^>=4.16.0.0
                      , blaze-html
                      , bytestring
                      , containers
                      , directory
                      , hashable
                      , heaps
                      , mtl
                      , optparse-applicative
                      , random 
                      , servant-blaze
                      , servant-multipart
                      , servant-server
                      , servant-websockets
                      , text 
                      , unordered-containers
                      , uuid
                      , wai
                      , warp
                      , websockets

    hs-source-dirs:   app
    default-language: GHC2021
    default-extensions: DataKinds
                       
                     ,  TypeFamilies
                     ,  DeriveAnyClass
                     ,  DeriveGeneric
