cabal-version:      3.0
name:               augslink-service
version:            0.1.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             fisnik
maintainer:         fisnik.ukaj@justeattakeaway.com
-- copyright:
category:           Network
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable augslink-service
    import:           warnings
    main-is:          Main.hs

    other-modules:      AugsLink.Core.API
                      , AugsLink.Core.Model 
                      , AugsLink.Core.Music 
                      , AugsLink.Core.Registry 
                      , AugsLink.Core.Room 
                      , AugsLink.Core.Shared 
                      , AugsLink.Core.User 
                      , AugsLink.Service.API 
                      , AugsLink.Service.Application 
                      , AugsLink.Service.Handlers.GetAudioWorker 
                      , AugsLink.Service.Handlers.GetHome 
                      , AugsLink.Service.Handlers.GetRoom 
                      , AugsLink.Service.Handlers.ListenWs 
                      , AugsLink.Service.Handlers.PostHome
                      , AugsLink.Service.Handlers.PutStartMusic
                      , AugsLink.Service.Handlers.PutUploadSong
                      , AugsLink.Service.Handlers.RoomWs 
                      , CommandLine 
                      , Commons.FFMpeg
                      , Commons.State
                      , Commons.Wav 
    -- other-extensions:
    build-depends:      aeson
                      , async
                      , base ^>=4.16.0.0
                      , binary
                      , blaze-html
                      , blaze-svg
                      , bytestring
                      , containers
                      , directory
                      , filepath
                      , hashable
                      , heaps
                      , http-media
                      , mtl
                      , optparse-applicative
                      , process
                      , random 
                      , regex-posix
                      , servant-blaze
                      , servant-multipart
                      , servant-server
                      , servant-websockets
                      , text 
                      , time
                      , unordered-containers
                      , unix
                      , uuid
                      , utf8-string
                      , wai
                      , warp
                      , websockets

    hs-source-dirs:   app
    default-language: GHC2021
    default-extensions: DataKinds
                       
                     ,  TypeFamilies
                     ,  DeriveAnyClass
                     ,  DeriveGeneric
