cabal-version:      3.0
name:               auxwire
version:            0.1.0
-- synopsis:
-- description:
author:             fisnik
maintainer:         ukaj808@gmail.com
-- copyright:
category:           Network
build-type:         Simple
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable auxwire
    import:           warnings
    main-is:          Main.hs

    other-modules:      AuxWire.Browser.RoomDesktop
                      , AuxWire.Browser.RoomMobile
                      , AuxWire.Core.API
                      , AuxWire.Core.Model 
                      , AuxWire.Core.Music 
                      , AuxWire.Core.Registry 
                      , AuxWire.Core.Room 
                      , AuxWire.Core.Shared 
                      , AuxWire.Core.User 
                      , AuxWire.Service.API 
                      , AuxWire.Service.Application 
                      , AuxWire.Service.Handlers.GetHome 
                      , AuxWire.Service.Handlers.GetRoom 
                      , AuxWire.Service.Handlers.MusicWs 
                      , AuxWire.Service.Handlers.PostHome
                      , AuxWire.Service.Handlers.PostValidateUrl
                      , AuxWire.Service.Handlers.PutStartMusic
                      , AuxWire.Service.Handlers.PutUploadSong
                      , AuxWire.Service.Handlers.RoomWs 
                      , CommandLine 
                      , Commons.FFMpeg
                      , Commons.State
                      , Commons.Wav 
                      , Commons.YtDlp
    -- other-extensions:
    build-depends:      aeson
                      , async
                      , base >=4.16.0.0
                      , binary
                      , blaze-html
                      , blaze-svg
                      , bytestring
                      , clay
                      , colour
                      , containers
                      , directory
                      , filepath
                      , hashable
                      , heaps
                      , http-media
                      , http-types
                      , mtl
                      , optparse-applicative
                      , palette
                      , process
                      , random 
                      , regex-posix
                      , servant-blaze
                      , servant-multipart
                      , servant-multipart-api
                      , servant-server
                      , servant-websockets
                      , temporary
                      , text 
                      , time
                      , unordered-containers
                      , unix
                      , uuid
                      , utf8-string
                      , wai
                      , wai-extra
                      , warp
                      , warp-tls
                      , websockets

    hs-source-dirs:   web-server
    default-language: GHC2021
    default-extensions: DataKinds
                       
                     ,  TypeFamilies
                     ,  DeriveAnyClass
                     ,  DeriveGeneric
